# genetic-factory-optimizer

./: CMakeLists.txt
data/: recipes.sqlite
include/: Building.h  Factory.h
scripts/: initializeDatabase.sql  updateDatabaseFromWiki.py
src/: Building.cpp  Factory.cpp  main.cpp
